crates/shaken/snapshots/shaken__modules__user_defined__tests__already exists@alias.snap
---
source: crates/shaken/src/modules/user_defined/tests.rs
expression: mock.get_response()
---
kind:
  - Problem: "'!bar' already exits"

