crates/shaken/snapshots/shaken__modules__user_defined__tests__does !foo@alias.snap
---
source: crates/shaken/src/modules/user_defined/tests.rs
expression: mock.get_response()
---
kind:
  - Say: bar

