crates/shaken/snapshots/shaken__modules__user_defined__tests__missing leader@remove.snap
---
source: crates/shaken/src/modules/user_defined/tests.rs
expression: mock.get_response()
---
kind:
  - Problem: you must prefix commands with !

