crates/shaken/snapshots/shaken__modules__user_defined__tests__not found@alias.snap
---
source: crates/shaken/src/modules/user_defined/tests.rs
expression: mock.get_response()
---
kind:
  - Problem: "'!baz' was not found"

